2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

	* javax/swing/text/JTextArea.java (replaceRange): 
        Fixing doc.remove(start, length) misinterpretation.
	
2005-02-26  Roman Kennke  <roman@ontographics.com>

	* javax/swing/plaf/basic/BasicListUI
	(updateLayoutState,paint): make BasicListUI aware of the
	width of the rendered JList

2005-02-25  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add 0.14 release date.
	* configure.ac: Set version to 0.14.

2005-02-25  Sven de Marothy  <sven@physto.se>

	* java/net/InetAddress.java
	(toString): Don't print empty hostnames.
	Fixes bug #11956

2005-02-24  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/Makefile (SUBDIRS): Add cp-tools.
	* doc/www.gnu.org/cp-tools/Makefile: New file.
	* doc/www.gnu.org/cp-tools/cp-tools.wml: Likewise.
	* doc/www.gnu.org/cp-tools/texidoclet.html: Likewise.

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

	* javax/swing/Timer.java (constructor): assigning initialDelay

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>
   
	* javax/swing/Timer.java (Waker.run): firing the first action
	event.

2005-02-24  Chris Burdess  <dog@gnu.org>

	* BASE64.java: Truncate encoded byte array.

2005-02-24  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/font/TextAttribute.java: changed names to lower case;
	(readResolve): implemented.
	Added doc comments all over.

2005-02-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/SimpleDateFormat.java:
	Substitute StringBuilder for the original
	StringBuffer.

2005-02-22  Michael Koch  <konqueror@gmx.de>

	* gnu/java/security/PolicyFile.java,
	gnu/java/security/pkcs/PKCS7SignedData.java,
	gnu/java/security/pkcs/SignerInfo.java:
	Fixed copyright header.

2005-02-22  Roman Kennke <roman@ontographics.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Fixed Button left and right margin

2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/jni/gtk-peer/gthread-jni.c (throw):