@@ -1,6 +1,11 @@
 2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>
 
-	* javax/swing/text/JTextArea.java (replaceRange): 
+	* javax/swing/Timer.java: documenting and some
+          formatting.	
+        
+2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>
+
+	* javax/swing/JTextArea.java (replaceRange): 
         Fixing doc.remove(start, length) misinterpretation.
 	
 2005-02-26  Roman Kennke  <roman@ontographics.com>
